--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -16,9 +20,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-    rel="stylesheet"
-    href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
-  />
+      rel="stylesheet"
+      href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,8 +34,14 @@
     -->
     <title>BBANG KUT:: 탄소중립 정보공유 커뮤니티 플랫폼</title>
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
-    <meta property="og:title" content="BBANG KUT:: 탄소중립 정보공유 커뮤니티 플랫폼" />
-    <meta property="og:description" content="빵끗과 함께 자연의, 초록색 환경을 되살려요." />
+    <meta
+      property="og:title"
+      content="BBANG KUT:: 탄소중립 정보공유 커뮤니티 플랫폼"
+    />
+    <meta
+      property="og:description"
+      content="빵끗과 함께 자연의, 초록색 환경을 되살려요."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
